# agent-orchestrator

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  SKILL.md  claude_codex_orchestrator.py  pyproject.toml
.github/workflows/: ci.yml
orchestrator/: __init__.py  agents.py  artifacts.py  budget.py  cli.py  config.py  engine.py  fakes.py  gates.py  gitrepo.py  graph.py  metrics.py  planner.py  process.py  prompts.py  report.py  trim.py  util.py
reports/: orchestrator-run-20260628-wildlife.md
scripts/: deploy.py  run.py  smoke_static.py
tests/: test_optimizations.py
