[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-codex-orchestrator"
version = "0.1.0"
description = "Claude 规划 + Codex 实现 的多 agent 编码编排器（orchestrator-worker：客观验收门 + 多轮迭代 + 子任务 DAG）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zhenye Li", email = "Jonathan.work9811@gmail.com" }]
keywords = ["llm", "agent", "orchestrator", "claude", "codex", "codegen", "multi-agent", "orchestrator-worker"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []  # 零运行时依赖：仅标准库

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
agent-orchestrate = "orchestrator.cli:main"

[project.urls]
Homepage = "https://github.com/JOJOJONATHANJOSTAR/agent_corporation_framework"
Repository = "https://github.com/JOJOJONATHANJOSTAR/agent_corporation_framework"
Issues = "https://github.com/JOJOJONATHANJOSTAR/agent_corporation_framework/issues"

[tool.setuptools]
packages = ["orchestrator"]
py-modules = ["claude_codex_orchestrator"]
